src/instance.h

/* Opaque handle */
typedef struct PolyInstance PolyInstance;
typedef enum {
  POLY_STATUS_OK = 0,
  POLY_STATUS_ERROR = -1,
  POLY_STATUS_BAD_STAGE = -2,
  POLY_STATUS_INVALID = -3,
  POLY_STATUS_NOMEM = -4,
} PolyStatus;
typedef struct {
  bool own_ctx_on_success;
  bool own_ctx_on_failure;
} PolyInstanceOptions;
typedef struct {
  int code;
  const char *func;
  char message[256];
} PolyInstanceError;
typedef struct {
  const char *name;
  int role;
  PolyTensor *tensor;
  uint32_t flags;
} PolyBindingSpec;
typedef struct {
  const char *name;
  const char **inputs;
  int n_inputs;
  const char **outputs;
  int n_outputs;
  const char *objective;
  uint32_t flags;
} PolyEntrypointSpec;
PolyStatus poly_instance_scope_push(PolyInstance *inst, const char *fmt, ...)
    __attribute__((format(printf, 2, 3)));
/* FFI-friendly flat-input adapter. Module inputs are concatenated in module
 * order and split by input_counts. */
int poly_instance_define_module_arrays(
    PolyInstance *inst,
    const char **names,
    PolyTensor **inputs,
    const int *input_counts,
    PolyTensor **outputs,
    int n_modules
);
PolyInstance *poly_instance_from_bindings(
    PolyCtx *ctx,
    const PolyBindingSpec *bindings,
    int n_bindings,
    const PolyEntrypointSpec *entrypoints,
    int n_entrypoints,
    const PolyInstanceOptions *opts,
    PolyInstanceError *err
);
/* Create from IR bytes + optional safetensors weights.
 * Pass NULL/0 for weights to skip (params zero-initialized).
 * Returns NULL on error. */
PolyInstance *poly_instance_from_ir(
    const uint8_t *ir_data,
    int ir_len,
    const uint8_t *weights_data,
    int weights_len
);
/* Create from selected named sinks instead of every entrypoint registered on
 * the ctx. Frontend export uses this to package one traced lazy graph even if
 * the shared ctx contains old probes or other models. Names are copied by the
 * instance; ctx remains caller-owned. */
PolyInstance *poly_instance_from_sinks(
    PolyCtx *ctx,
    const char **names,
    PolyUOp **sinks,
    int n_sinks
);
void poly_instance_free(PolyInstance *inst);
/* Param Enumeration */

int poly_instance_param_count(const PolyInstance *inst);
const char *poly_instance_param_name(const PolyInstance *inst, int i);
int poly_instance_param_shape(const PolyInstance *inst, int i, int64_t *shape_out, int max_dims);
/* Historical F32-only mutable view. Returns NULL for non-F32 state. */
float *poly_instance_param_data(PolyInstance *inst, int i, int64_t *numel_out);
/* Exact raw scalar-storage bytes in the declared dtype. */
void *poly_instance_param_data_raw(PolyInstance *inst, int i, int64_t *numel_out);
int poly_instance_param_dtype_id(const PolyInstance *inst, int i);
size_t poly_instance_param_nbytes(const PolyInstance *inst, int i);
/* Buffer Enumeration */

int poly_instance_buf_count(const PolyInstance *inst);
const char *poly_instance_buf_name(const PolyInstance *inst, int i);
int poly_instance_buf_role(const PolyInstance *inst, int i);
bool poly_instance_buf_trainable(const PolyInstance *inst, int i);
bool poly_instance_param_trainable(const PolyInstance *inst, int i);
int poly_instance_set_buf_trainable(PolyInstance *inst, int i, bool trainable);
int poly_instance_set_param_trainable(PolyInstance *inst, int i, bool trainable);
int poly_instance_buf_shape(const PolyInstance *inst, int i, int64_t *shape_out, int max_dims);
/* Historical F32-only mutable view. Returns NULL for non-F32 state. */
float *poly_instance_buf_data(PolyInstance *inst, int i, int64_t *numel_out);
/* Exact raw scalar-storage bytes in the declared dtype. */
void *poly_instance_buf_data_raw(PolyInstance *inst, int i, int64_t *numel_out);
int poly_instance_buf_dtype_id(const PolyInstance *inst, int i);
size_t poly_instance_buf_nbytes(const PolyInstance *inst, int i);
/* Weight I/O (safetensors) */

/* Export selected persistent buffers as safetensors. Caller frees returned bytes.
 * poly_instance_export_weights() preserves the historical default: params and
 * optimizer state. */
uint8_t *poly_instance_export_weights(PolyInstance *inst, int *out_len);
uint8_t *poly_instance_export_weights_ex(PolyInstance *inst, int *out_len, uint32_t flags);
/* Import weights from safetensors. Matches by name. Returns 0 on success. */
int poly_instance_import_weights(PolyInstance *inst, const uint8_t *data, int len);
/* IR Export */

uint8_t *poly_instance_export_ir(PolyInstance *inst, int *out_len);
/* Bound compiled-program export. The artifact contains placed PROGRAM-backed
 * LINEAR entrypoints and their named physical buffer ABI. It is ABI/device
 * bound, is not PGIR, and is never a placement source. Weights remain a
 * separate safetensors artifact. */
uint8_t *poly_instance_export_program(PolyInstance *inst, int *out_len);
PolyInstance *poly_instance_from_program(
    const uint8_t *program_data,
    int program_len,
    const uint8_t *weights_data,
    int weights_len
);
uint8_t *poly_instance_save_bundle_ex(PolyInstance *inst, int *out_len, uint32_t weight_flags);
int poly_instance_set_device_map_arrays(
    PolyInstance *inst,
    const char **modules,
    const char **devices,
    int n_entries
);
/* Execution */

/* Typed I/O binding for forward/train calls. The Instance input schema owns
 * shape/dtype; each call supplies an exact byte representation and the dtype
 * id is validated before the named BUFFER is mutated. */
typedef struct {
  const char *name;
  const void *data;
  size_t nbytes;
  int dtype_id;
} PolyIOBinding;
/* Generic entrypoint execution. Compiles lazily on first call.
 * I/O bindings match instance buffer names. Output written to
 * instance-owned buffers (retrieve via poly_instance_buf_data).
 * Returns 0 on success. */
int poly_instance_call(PolyInstance *inst, const char *entrypoint, PolyIOBinding *io, int n_io);
/* Entrypoint signature inspection for language frontends and generic callers. */
int poly_instance_entrypoint_count(const PolyInstance *inst);
const char *poly_instance_entrypoint_name(const PolyInstance *inst, int entrypoint_index);
int poly_instance_entrypoint_input_count(const PolyInstance *inst, const char *entrypoint);
const char *poly_instance_entrypoint_input_name(
    const PolyInstance *inst,
    const char *entrypoint,
    int input_index
);
int poly_instance_entrypoint_output_count(const PolyInstance *inst, const char *entrypoint);
const char *poly_instance_entrypoint_output_name(
    const PolyInstance *inst,
    const char *entrypoint,
    int output_index
);
/* Convenience wrappers */

/* forward() = call("forward", ...) */
int poly_instance_forward(PolyInstance *inst, PolyIOBinding *inputs, int n_inputs);
/* train_step() = value_and_grad("loss", ...) + scheduled optimizer effects */
int poly_instance_train_step(PolyInstance *inst, PolyIOBinding *io, int n_io, float *loss_out);
/* Configure optimizer. Call before first train_step. */
int poly_instance_set_optimizer(
    PolyInstance *inst,
    int kind,
    float lr,
    float beta1,
    float beta2,
    float eps,
    float weight_decay
);
int poly_instance_set_optimizer_ex(
    PolyInstance *inst,
    int kind,
    float lr,
    float beta1,
    float beta2,
    float eps,
    float weight_decay,
    float momentum,
    bool nesterov,
    bool classic
);