py/polygrad/_ffi.py


    lib.poly_jit_free.restype = None
    lib.poly_jit_free.argtypes = [_ptr]

    lib.poly_jit_set_prune.restype = ctypes.c_int
    lib.poly_jit_set_prune.argtypes = [_ptr, ctypes.c_bool]

    lib.poly_jit_begin_capture.restype = ctypes.c_int
    lib.poly_jit_begin_capture.argtypes = [_ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_jit_end_capture.restype = ctypes.c_int
    lib.poly_jit_end_capture.argtypes = [_ptr]

    lib.poly_jit_cancel_capture.restype = None
    lib.poly_jit_cancel_capture.argtypes = [_ptr]

    lib.poly_jit_is_captured.restype = ctypes.c_bool
    lib.poly_jit_is_captured.argtypes = [_ptr]

    lib.poly_jit_schedule_count.restype = ctypes.c_int
    lib.poly_jit_schedule_count.argtypes = [_ptr]

    lib.poly_jit_run.restype = ctypes.c_int
    lib.poly_jit_run.argtypes = [_ptr, ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_jit_run_with_vars.restype = ctypes.c_int
    lib.poly_jit_run_with_vars.argtypes = [
        _ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.POINTER(PolyVarBinding), ctypes.c_int
    ]

    # --- Optimizer graph builders (optim.h) ---
    lib.poly_optim_build_step.restype = ctypes.c_int
    lib.poly_optim_build_step.argtypes = [
        _ptr,
        ctypes.POINTER(PolyOptimConfig),
        _ptr,
        ctypes.POINTER(_ptr),
        ctypes.POINTER(_ptr),
        ctypes.c_int,
        ctypes.POINTER(_ptr),
        ctypes.POINTER(_ptr),
        _ptr,
        _ptr,
        ctypes.POINTER(_ptr),
        ctypes.c_int,
    ]

    # --- Einsum ---
    lib.poly_einsum.restype = _ptr
    lib.poly_einsum.argtypes = [
        _ptr, ctypes.c_char_p,
        ctypes.POINTER(_ptr),
        ctypes.c_int,
    ]

    # --- Rearrange ---
    lib.poly_rearrange.restype = _ptr
    lib.poly_rearrange.argtypes = [
        _ptr, ctypes.c_char_p, _ptr,
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.c_int64), ctypes.c_int,
    ]
    lib.poly_tensor_rearrange.restype = _ptr
    lib.poly_tensor_rearrange.argtypes = [
        _ptr, ctypes.c_char_p, _ptr,
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.c_int64), ctypes.c_int,
    ]

    # --- PolyInstance (instance.h) ---
    lib.poly_instance_from_ir.restype = _ptr
    lib.poly_instance_from_ir.argtypes = [_u8p, ctypes.c_int, _u8p, ctypes.c_int]
    lib.poly_instance_from_program.restype = _ptr
    lib.poly_instance_from_program.argtypes = [_u8p, ctypes.c_int, _u8p, ctypes.c_int]

    lib.poly_instance_from_sinks.restype = _ptr
    lib.poly_instance_from_sinks.argtypes = [
        _ptr, ctypes.POINTER(ctypes.c_char_p), ctypes.POINTER(_ptr), ctypes.c_int
    ]

    lib.poly_instance_from_bindings.restype = _ptr
    lib.poly_instance_from_bindings.argtypes = [
        _ptr,
        ctypes.POINTER(PolyBindingSpec), ctypes.c_int,
        ctypes.POINTER(PolyEntrypointSpec), ctypes.c_int,
        ctypes.POINTER(PolyInstanceOptions),
        ctypes.POINTER(PolyInstanceError),
    ]

    lib.poly_instance_define_module_arrays.restype = ctypes.c_int
    lib.poly_instance_define_module_arrays.argtypes = [
        _ptr,
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(_ptr),
        ctypes.POINTER(ctypes.c_int),
        ctypes.POINTER(_ptr),
        ctypes.c_int,
    ]

    lib.poly_instance_set_device_map_arrays.restype = ctypes.c_int
    lib.poly_instance_set_device_map_arrays.argtypes = [
        _ptr,
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.c_int,
    ]

    lib.poly_instance_free.restype = None
    lib.poly_instance_free.argtypes = [_ptr]

    lib.poly_instance_param_count.restype = ctypes.c_int
    lib.poly_instance_param_count.argtypes = [_ptr]

    lib.poly_instance_param_name.restype = ctypes.c_char_p
    lib.poly_instance_param_name.argtypes = [_ptr, ctypes.c_int]

    lib.poly_instance_param_shape.restype = ctypes.c_int
    lib.poly_instance_param_shape.argtypes = [_ptr, ctypes.c_int, _i64p, ctypes.c_int]

    lib.poly_instance_param_data.restype = _fp
    lib.poly_instance_param_data.argtypes = [_ptr, ctypes.c_int, _i64p]
    lib.poly_instance_param_data_raw.restype = _ptr
    lib.poly_instance_param_data_raw.argtypes = [_ptr, ctypes.c_int, _i64p]
    lib.poly_instance_param_dtype_id.restype = ctypes.c_int
    lib.poly_instance_param_dtype_id.argtypes = [_ptr, ctypes.c_int]
    lib.poly_instance_param_nbytes.restype = ctypes.c_size_t
    lib.poly_instance_param_nbytes.argtypes = [_ptr, ctypes.c_int]

    lib.poly_instance_param_trainable.restype = ctypes.c_bool
    lib.poly_instance_param_trainable.argtypes = [_ptr, ctypes.c_int]

    lib.poly_instance_set_param_trainable.restype = ctypes.c_int
    lib.poly_instance_set_param_trainable.argtypes = [_ptr, ctypes.c_int, ctypes.c_bool]

    lib.poly_instance_buf_count.restype = ctypes.c_int
    lib.poly_instance_buf_count.argtypes = [_ptr]

    lib.poly_instance_buf_name.restype = ctypes.c_char_p
    lib.poly_instance_buf_name.argtypes = [_ptr, ctypes.c_int]

    lib.poly_instance_buf_role.restype = ctypes.c_int
    lib.poly_instance_buf_role.argtypes = [_ptr, ctypes.c_int]

    lib.poly_instance_buf_trainable.restype = ctypes.c_bool
    lib.poly_instance_buf_trainable.argtypes = [_ptr, ctypes.c_int]

    lib.poly_instance_set_buf_trainable.restype = ctypes.c_int
    lib.poly_instance_set_buf_trainable.argtypes = [_ptr, ctypes.c_int, ctypes.c_bool]

    lib.poly_instance_buf_shape.restype = ctypes.c_int
    lib.poly_instance_buf_shape.argtypes = [_ptr, ctypes.c_int, _i64p, ctypes.c_int]

    lib.poly_instance_buf_data.restype = _fp
    lib.poly_instance_buf_data.argtypes = [_ptr, ctypes.c_int, _i64p]
    lib.poly_instance_buf_data_raw.restype = _ptr
    lib.poly_instance_buf_data_raw.argtypes = [_ptr, ctypes.c_int, _i64p]
    lib.poly_instance_buf_dtype_id.restype = ctypes.c_int
    lib.poly_instance_buf_dtype_id.argtypes = [_ptr, ctypes.c_int]
    lib.poly_instance_buf_nbytes.restype = ctypes.c_size_t
    lib.poly_instance_buf_nbytes.argtypes = [_ptr, ctypes.c_int]

    lib.poly_instance_export_weights.restype = _u8p
    lib.poly_instance_export_weights.argtypes = [_ptr, _ip]
    lib.poly_instance_export_weights_ex.restype = _u8p
    lib.poly_instance_export_weights_ex.argtypes = [_ptr, _ip, ctypes.c_uint32]

    lib.poly_instance_import_weights.restype = ctypes.c_int
    lib.poly_instance_import_weights.argtypes = [_ptr, _u8p, ctypes.c_int]

    lib.poly_instance_export_ir.restype = _u8p
    lib.poly_instance_export_ir.argtypes = [_ptr, _ip]
    lib.poly_instance_export_program.restype = _u8p
    lib.poly_instance_export_program.argtypes = [_ptr, _ip]

    # Bundle format
    lib.poly_instance_save_bundle.restype = _u8p
    lib.poly_instance_save_bundle.argtypes = [_ptr, _ip]
    lib.poly_instance_save_bundle_ex.restype = _u8p
    lib.poly_instance_save_bundle_ex.argtypes = [_ptr, _ip, ctypes.c_uint32]

    lib.poly_instance_from_bundle.restype = _ptr
    lib.poly_instance_from_bundle.argtypes = [_u8p, ctypes.c_int]

    lib.poly_instance_forward.restype = ctypes.c_int
    lib.poly_instance_forward.argtypes = [_ptr, ctypes.POINTER(PolyIOBinding), ctypes.c_int]

    lib.poly_instance_call.restype = ctypes.c_int
    lib.poly_instance_call.argtypes = [
        _ptr, ctypes.c_char_p, ctypes.POINTER(PolyIOBinding), ctypes.c_int]

    lib.poly_instance_entrypoint_count.restype = ctypes.c_int
    lib.poly_instance_entrypoint_count.argtypes = [_ptr]
    lib.poly_instance_entrypoint_name.restype = ctypes.c_char_p
    lib.poly_instance_entrypoint_name.argtypes = [_ptr, ctypes.c_int]
    lib.poly_instance_entrypoint_input_count.restype = ctypes.c_int
    lib.poly_instance_entrypoint_input_count.argtypes = [_ptr, ctypes.c_char_p]
    lib.poly_instance_entrypoint_input_name.restype = ctypes.c_char_p
    lib.poly_instance_entrypoint_input_name.argtypes = [_ptr, ctypes.c_char_p, ctypes.c_int]
    lib.poly_instance_entrypoint_output_count.restype = ctypes.c_int
    lib.poly_instance_entrypoint_output_count.argtypes = [_ptr, ctypes.c_char_p]
    lib.poly_instance_entrypoint_output_name.restype = ctypes.c_char_p
    lib.poly_instance_entrypoint_output_name.argtypes = [_ptr, ctypes.c_char_p, ctypes.c_int]

    lib.poly_instance_train_step.restype = ctypes.c_int
    lib.poly_instance_train_step.argtypes = [_ptr, ctypes.POINTER(PolyIOBinding), ctypes.c_int, _fp]

    lib.poly_instance_set_optimizer.restype = ctypes.c_int
    lib.poly_instance_set_optimizer.argtypes = [_ptr, ctypes.c_int,
        ctypes.c_float, ctypes.c_float, ctypes.c_float,
        ctypes.c_float, ctypes.c_float]
    lib.poly_instance_set_optimizer_ex.restype = ctypes.c_int
    lib.poly_instance_set_optimizer_ex.argtypes = [_ptr, ctypes.c_int,
        ctypes.c_float, ctypes.c_float, ctypes.c_float,
        ctypes.c_float, ctypes.c_float, ctypes.c_float,
        ctypes.c_bool, ctypes.c_bool]

    # MLP family builder (model_mlp.h)
    lib.poly_mlp_from_json.restype = _ptr
    lib.poly_mlp_from_json.argtypes = [ctypes.c_char_p, ctypes.c_int, ctypes.c_int]

    # TabM family builder (model_tabm.h)
    lib.poly_tabm_instance.restype = _ptr
    lib.poly_tabm_instance.argtypes = [ctypes.c_char_p, ctypes.c_int, ctypes.c_int]

    # NAM family builder (model_nam.h)
    lib.poly_nam_instance.restype = _ptr
    lib.poly_nam_instance.argtypes = [ctypes.c_char_p, ctypes.c_int, ctypes.c_int]

    # HF/model loaders (src/models/*.c)
    lib.poly_hf_load.restype = _ptr
    lib.poly_hf_load.argtypes = [
        ctypes.c_char_p, ctypes.c_int,
        ctypes.POINTER(_u8p),
        ctypes.POINTER(ctypes.c_int64),
        ctypes.c_int, ctypes.c_int, ctypes.c_int, ctypes.c_int,
    ]

    lib.poly_gguf_load.restype = _ptr
    lib.poly_gguf_load.argtypes = [
        _u8p, ctypes.c_int64, ctypes.c_int, ctypes.c_int, ctypes.c_int
    ]

    # --- Shape-on-UOp accessors ---
    lib.poly_uop_ndim.restype = ctypes.c_int
    lib.poly_uop_ndim.argtypes = [_ptr, _ptr]

    lib.poly_uop_max_shape_dims.restype = _i64p
    lib.poly_uop_max_shape_dims.argtypes = [_ptr, _ptr]

    lib.poly_uop_shape_dim.restype = _ptr
    lib.poly_uop_shape_dim.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_uop_const_i64.restype = ctypes.c_int
    lib.poly_uop_const_i64.argtypes = [_ptr, ctypes.POINTER(ctypes.c_int64)]

    lib.poly_uop_unbind_var.restype = _ptr
    lib.poly_uop_unbind_var.argtypes = [_ptr]

    lib.poly_uop_bind_value.restype = ctypes.c_int
    lib.poly_uop_bind_value.argtypes = [_ptr, ctypes.POINTER(ctypes.c_int64)]

    # --- Additional composed ops (shape read from UOp) ---
    lib.poly_rmsnorm_apply.restype = _ptr
    lib.poly_rmsnorm_apply.argtypes = [_ptr, _ptr, _ptr, ctypes.c_double]

    lib.poly_sdpa.restype = _ptr
    lib.poly_sdpa.argtypes = [_ptr, _ptr, _ptr, _ptr, _ptr, ctypes.c_int]

    lib.poly_rope.restype = _ptr
    lib.poly_rope.argtypes = [_ptr, _ptr, _ptr, _ptr]

    lib.poly_repeat_interleave.restype = _ptr
    lib.poly_repeat_interleave.argtypes = [_ptr, _ptr, ctypes.c_int, ctypes.c_int]

    lib.poly_argmax.restype = _ptr
    lib.poly_argmax.argtypes = [_ptr, _ptr, ctypes.c_int, ctypes.c_int]

    lib.poly_sort.restype = ctypes.c_int
    lib.poly_sort.argtypes = [_ptr, _ptr, ctypes.c_int, ctypes.c_int, _ptrp, _ptrp]

    lib.poly_argsort.restype = _ptr
    lib.poly_argsort.argtypes = [_ptr, _ptr, ctypes.c_int, ctypes.c_int]

    lib.poly_topk.restype = ctypes.c_int
    lib.poly_topk.argtypes = [_ptr, _ptr, ctypes.c_int64, ctypes.c_int, ctypes.c_int,
                              ctypes.c_int, _ptrp, _ptrp]

    lib.poly_mse_loss.restype = _ptr
    lib.poly_mse_loss.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_mae_loss.restype = _ptr
    lib.poly_mae_loss.argtypes = [_ptr, _ptr, _ptr]

    # --- CUDA helpers (conditional) ---
    has_cuda = hasattr(lib, 'poly_cuda_available')
    if has_cuda:
        lib.poly_cuda_available.restype = ctypes.c_bool
        lib.poly_cuda_available.argtypes = []

    return has_cuda


# --- Public API ---

def get_lib():
    """Load the library and initialize all module-level state.
